@@ -1,32 +1,8 @@
 AUX axis-1.4-build.xml.patch 517 RMD160 831d8d2bbf65da81896b5f23127ae78e16beac4e SHA1 210117032afeaa3c4d82f6da38ba7b4586486d33 SHA256 30d1e9a91ee70113720833678b661554d99d89326a41927f1156e33d7712d952
-MD5 ddc66e11d8649eff8f9e81bf7a6d2d3b files/axis-1.4-build.xml.patch 517
-RMD160 831d8d2bbf65da81896b5f23127ae78e16beac4e files/axis-1.4-build.xml.patch 517
-SHA256 30d1e9a91ee70113720833678b661554d99d89326a41927f1156e33d7712d952 files/axis-1.4-build.xml.patch 517
 AUX axis-1.4-path_refs.xml.patch 762 RMD160 3f6a8bb0288842adee09e75d977d1673f5380a22 SHA1 dea66dc8fb494fccbc4e56c29b4ad9891a87ca12 SHA256 940964f57376c042442c9cb2d6d6ca9ca06566abfa06770025cbbedfe0c1ea8a
-MD5 137170915e51df1e057bf081158d120d files/axis-1.4-path_refs.xml.patch 762
-RMD160 3f6a8bb0288842adee09e75d977d1673f5380a22 files/axis-1.4-path_refs.xml.patch 762
-SHA256 940964f57376c042442c9cb2d6d6ca9ca06566abfa06770025cbbedfe0c1ea8a files/axis-1.4-path_refs.xml.patch 762
 AUX axis-1.4-targets.xml.patch 2780 RMD160 f8ecdf60f8285eff52e5946ff738ba305b15bdc9 SHA1 9c3c5693a42f60eddbb9f5aecab823e6ae8921bc SHA256 ea9f43d279ff90a9848cb17956430097533141ada147994d66018c808a66b0e2
-MD5 eedd116117890e3588676579befb417a files/axis-1.4-targets.xml.patch 2780
-RMD160 f8ecdf60f8285eff52e5946ff738ba305b15bdc9 files/axis-1.4-targets.xml.patch 2780
-SHA256 ea9f43d279ff90a9848cb17956430097533141ada147994d66018c808a66b0e2 files/axis-1.4-targets.xml.patch 2780
 AUX axis-1.4-tools-build.xml.patch 756 RMD160 d62b5c3f7b86e416e52b025ad4527c27743a446b SHA1 3525ee11e6d08a12b588ef599c55b541e68f0b7b SHA256 90609f01b2ed4a598277ad0459fa27433644f8fc4c8ed6a9d22d0ccd6a84213a
-MD5 4c48f770c8642cb4befe9e63f38f36de files/axis-1.4-tools-build.xml.patch 756
-RMD160 d62b5c3f7b86e416e52b025ad4527c27743a446b files/axis-1.4-tools-build.xml.patch 756
-SHA256 90609f01b2ed4a598277ad0459fa27433644f8fc4c8ed6a9d22d0ccd6a84213a files/axis-1.4-tools-build.xml.patch 756
 AUX build.properties 282 RMD160 3bd03454c8cf97a39d72584bb52d1babfe86a030 SHA1 f2ca5bfdf973cd97295256213383be0246c50a00 SHA256 904c7615612013d7397a7d9580d1b7405f0fb9e3ec70f4a57c0f44b93ccfdfd2
-MD5 db56c8f73c51107d2b45b4c1b78bb8b8 files/build.properties 282
-RMD160 3bd03454c8cf97a39d72584bb52d1babfe86a030 files/build.properties 282
-SHA256 904c7615612013d7397a7d9580d1b7405f0fb9e3ec70f4a57c0f44b93ccfdfd2 files/build.properties 282
 DIST axis-src-1_4.tar.gz 17041546 RMD160 5bf0a7b6c9708b2217ee06e226255766735ce323 SHA1 52b3703c8e807dc212e06b8c216685b4d18f32b5 SHA256 911b4467f3d6cfe2e50fb7baea7a754e6aa717902d6ed91cef78f8f52bef8572
-EBUILD axis-1.4.ebuild 3063 RMD160 2e1adf560fd58d58c0bf0113378a05f26386c950 SHA1 abdce1ada76a90dbb5e173b9603ea675095d7c81 SHA256 d6a74b881534f21662903519988e5a2370b21452b351d1f29fd63fde5b6b98e6
-MD5 fafea7545a1873aad08c53ba09d850f3 axis-1.4.ebuild 3063
-RMD160 2e1adf560fd58d58c0bf0113378a05f26386c950 axis-1.4.ebuild 3063
-SHA256 d6a74b881534f21662903519988e5a2370b21452b351d1f29fd63fde5b6b98e6 axis-1.4.ebuild 3063
-MISC ChangeLog 447 RMD160 7c4f364cb90edc188df84a144829b88570428810 SHA1 fb4018292dfd25473380be0a8c5acba01bac3347 SHA256 e0241826af3a1cfe2d7300172a8b1b929bda3ddc816f144dc4e745609895715d
-MD5 ea17422b56ef36388be24431de4e4d2b ChangeLog 447
-RMD160 7c4f364cb90edc188df84a144829b88570428810 ChangeLog 447
-SHA256 e0241826af3a1cfe2d7300172a8b1b929bda3ddc816f144dc4e745609895715d ChangeLog 447
-MD5 8fc69dbd2df1b92d444662eb1614d32a files/digest-axis-1.4 244
-RMD160 0104e5a31097117e3e8c3c0dafa4bbeba160e07b files/digest-axis-1.4 244
-SHA256 c8a46c60925224062a8e1bc991ec30ebf03a59a0bc9640a0f367c7cd5ca727c7 files/digest-axis-1.4 244
+EBUILD axis-1.4.ebuild 3082 RMD160 dc19b92598cf5d2832489f7ae971bfe03f0f8227 SHA1 a699ad75ead1856acc5e0e5ed8002836cd0e53de SHA256 f99137a58fa1cd32ec758165f7aeb15c1a29b95dcf8c1283f2da5d53d19c1265
+MISC ChangeLog 540 RMD160 924bc2480a92b5439268223d05180afb74597506 SHA1 1e7e48487710a1b04f2ee47b9d235e0e968b51a2 SHA256 f379d577208aa113e46e3dd63f2711e95dfdede9376566db8f0ee778dc8fa5aa
