@@ -1,6 +1,9 @@
 # ChangeLog for www-servers/axis
-# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  07 May 2007; Vlastimil Babka <caster@gentoo.org> axis-1.4.ebuild:
+  Migrate to split-ant.
 
   02 Oct 2006; Vlastimil Babka <caster@gentoo.org> +axis-1.4.ebuild,
   +files/axis-1.4-build.xml.patch, +files/axis-1.4-path_refs.xml.patch,
